@@ -1,36 +1,37 @@
 /*
- * Copyright (c) 2003 Sun Microsystems, Inc. All  Rights Reserved.
+ * @(#)Intro.java	1.23 04/07/26
+ * 
+ * Copyright (c) 2004 Sun Microsystems, Inc. All Rights Reserved.
  * 
  * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
+ * modification, are permitted provided that the following conditions are met:
  * 
- * -Redistributions of source code must retain the above copyright
- *  notice, this list of conditions and the following disclaimer.
+ * -Redistribution of source code must retain the above copyright notice, this
+ *  list of conditions and the following disclaimer.
  * 
- * -Redistribution in binary form must reproduct the above copyright
- *  notice, this list of conditions and the following disclaimer in
- *  the documentation and/or other materials provided with the distribution.
+ * -Redistribution in binary form must reproduce the above copyright notice, 
+ *  this list of conditions and the following disclaimer in the documentation
+ *  and/or other materials provided with the distribution.
  * 
- * Neither the name of Sun Microsystems, Inc. or the names of contributors
- * may be used to endorse or promote products derived from this software
- * without specific prior written permission.
+ * Neither the name of Sun Microsystems, Inc. or the names of contributors may 
+ * be used to endorse or promote products derived from this software without 
+ * specific prior written permission.
  * 
- * This software is provided "AS IS," without a warranty of any kind. ALL
+ * This software is provided "AS IS," without a warranty of any kind. ALL 
  * EXPRESS OR IMPLIED CONDITIONS, REPRESENTATIONS AND WARRANTIES, INCLUDING
  * ANY IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE
- * OR NON-INFRINGEMENT, ARE HEREBY EXCLUDED. SUN AND ITS LICENSORS SHALL NOT
- * BE LIABLE FOR ANY DAMAGES OR LIABILITIES SUFFERED BY LICENSEE AS A RESULT
- * OF OR RELATING TO USE, MODIFICATION OR DISTRIBUTION OF THE SOFTWARE OR ITS
- * DERIVATIVES. IN NO EVENT WILL SUN OR ITS LICENSORS BE LIABLE FOR ANY LOST
- * REVENUE, PROFIT OR DATA, OR FOR DIRECT, INDIRECT, SPECIAL, CONSEQUENTIAL,
- * INCIDENTAL OR PUNITIVE DAMAGES, HOWEVER CAUSED AND REGARDLESS OF THE THEORY
- * OF LIABILITY, ARISING OUT OF THE USE OF OR INABILITY TO USE SOFTWARE, EVEN
- * IF SUN HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
+ * OR NON-INFRINGEMENT, ARE HEREBY EXCLUDED. SUN MIDROSYSTEMS, INC. ("SUN")
+ * AND ITS LICENSORS SHALL NOT BE LIABLE FOR ANY DAMAGES SUFFERED BY LICENSEE
+ * AS A RESULT OF USING, MODIFYING OR DISTRIBUTING THIS SOFTWARE OR ITS
+ * DERIVATIVES. IN NO EVENT WILL SUN OR ITS LICENSORS BE LIABLE FOR ANY LOST 
+ * REVENUE, PROFIT OR DATA, OR FOR DIRECT, INDIRECT, SPECIAL, CONSEQUENTIAL, 
+ * INCIDENTAL OR PUNITIVE DAMAGES, HOWEVER CAUSED AND REGARDLESS OF THE THEORY 
+ * OF LIABILITY, ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, 
+ * EVEN IF SUN HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
  * 
- * You acknowledge that Software is not designed, licensed or intended for
- * use in the design, construction, operation or maintenance of any nuclear
- * facility.
+ * You acknowledge that this software is not designed, licensed or intended
+ * for use in the design, construction, operation or maintenance of any
+ * nuclear facility.
  */
 
 
@@ -55,7 +56,7 @@ import java.util.Arrays;
 /**
  * Introduction to the Java2Demo.  
  *
- * @version @(#)Intro.java	1.19 03/06/26
+ * @version @(#)Intro.java	1.20 03/10/23
  * @author Brian Lichtenwalter
  */
 public class Intro extends JPanel {
@@ -226,7 +227,7 @@ public class Intro extends JPanel {
             b.setText(b.isSelected() ? "Select All" : "Unselect All");
             for (int i = 0; i < surface.director.size(); i++) {
                 Surface.Scene scene = (Surface.Scene) surface.director.get(i); 
-                scene.participate = new Boolean(!b.isSelected());
+                scene.participate = Boolean.valueOf(!b.isSelected());
             }
 	    table.tableChanged(new TableModelEvent(dataModel));
         }
@@ -509,7 +510,7 @@ public class Intro extends JPanel {
          */
         static class Scene extends Object {
             public Object name;
-            public Object participate = new Boolean(true);
+            public Object participate = Boolean.TRUE;
             public Object pauseAmt;
             public Vector parts;
             public int index;
@@ -1578,7 +1579,8 @@ public class Intro extends JPanel {
                 "Joey Beheler", "Aastha Bhardwaj", "Daniel Rice",
                 "Chris Campbell", "Shinsuke Fukuda", "Dmitri Trembovetski",
                 "Chet Haase", "Jennifer Godinez", "Nicholas Talian",
-                "Raul Vera", "Ankit Patel", "Ilya Bagrak"
+                "Raul Vera", "Ankit Patel", "Ilya Bagrak",
+                "Praveen Mohan", "Rakesh Menon"
             };
             static Font font = new Font("serif", Font.PLAIN, 26);
             static FontMetrics fm = Surface.getMetrics(font);
